--- a/index.html
+++ b/index.html
@@ -15,5 +15,42 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="menu">
+      <!-- Item 1 -->
+      <div class="menu-item">
+        <a href="#!">Home page</a>
+        <div class="sub-menu">
+          <h3>Home ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit possimus porro, soluta, asperiores neque adipisci aperiam harum molestias consequatur optio provident perferendis, quo iste quae corrupti quam eveniet tenetur ipsam.</p>          
+        </div>
+      </div>
+
+      <!-- Item 2 -->
+      <div class="menu-item">
+      <a href="#!">Products</a>
+      <div class="sub-menu">
+        <h3>Products ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor nam
+          repellendus quaerat facere suscipit eos nostrum soluta placeat ea
+          voluptate.
+        </p>
+      </div>
+    </div>
+
+    <!-- Item 3 -->
+    <div class="menu-item">
+      <a href="#!">Manufacturers</a>
+      <div class="sub-menu">
+        <h3>Manufacturers ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor nam
+          repellendus quaerat facere suscipit eos nostrum soluta placeat ea
+          voluptate.
+        </p>
+      </div>
+    </div>
+    </div>
+  </body>
 </html>
